[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.13.0"
heapless = "0.8.0"
regex = "1.11.1"
num = "0.4.3"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat", default-features = false }
indoc = "2.0.5"
paste = "1.0.15"


[[bench]]
name = "bench_days"
harness = false
